Resolved the data table problem not showing trips. I had to rename the URL in TripsList.html from trips/tableDate to the one maching my controller. Found out what is causing the problem bz accessind devtools where i found aerror 404 on the Table form request

--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -10,13 +10,6 @@ body {
     color: #FF0000;
 }
 
-.sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-}
 
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
